# xparallel-test

mu_offloading/: CMakeLists.txt  build.sh  inverted_mu_offload_test.cpp  trace_readonly.txt
mu_offloading/data/: docs_sparse_vector.json  query_sparse_vector.json  rand_sparse_vector.py  result.json
mu_offloading/helper/: CMakeLists.txt  metisx_helper.cpp  metisx_helper.hpp
mu_offloading/kernel/: CMakeLists.txt  inverted_index_flat_kernel.cpp  inverted_index_kernel.cpp
mu_offloading/kernel/cmake/: MetisXHelpers.cmake  metisx.cmake
mu_offloading/xparallel/: CMakeLists.txt  xparallel.cpp  xparallel.hpp  xparallel_test.cpp
mu_offloading/xparallel/rust/: cxx.h
